# dinha

./: .env  .gitignore  Cargo.toml  README.md  go.mod  go.sum
cmd/dinha/: main.go
cmd/dinha-daemon/: main.go
internal/db/: db.go
internal/model/: model.go
internal/service/: file.go  settings.go  watch.go
internal/status/: status.go
internal/tui/: app.go  banner.go  expired.go  explorer.go  filebrowser.go
migrations/2023-02-24-180235_create_files/: down.sql  up.sql
src/: actions.rs  app.rs  lib.rs  main.rs  models.rs  schema.rs
src/db/: mod.rs
src/file/: mod.rs  model.rs  schema.rs  service.rs
src/file_event/: service.rs
src/file_watch/: mod.rs  model.rs  schema.rs
src/views/: banner.rs  main.rs  mod.rs
src/views/components/: actions_dialog.rs  dialog.rs  form_dialog.rs  mod.rs  render_dialog.rs  unwatch_folder_dialog.rs  watch_new_folder_dialog.rs
src/watch/: mod.rs  model.rs  schema.rs  service.rs
