[package]
name = "dinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.0"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
serde = { version = "1.0.137", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.10.0"